Third party client downloading and updating